# taskr

./: CMakeLists.txt  build.bat
data/: tasks.txt
src/: main.cpp  taskManager.cpp  taskManager.h
